--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.545.0",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-before-after-slider-component": "^1.1.8",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
