--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.545.0",
     "next": "15.5.3",
+    "nodemailer": "^7.0.12",
     "react": "19.1.0",
     "react-before-after-slider-component": "^1.1.8",
     "react-dom": "19.1.0"
